--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.yarnrc.*
+*.yarn 
+*.vite
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
